--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@actions/exec": "^1.0.4",
     "@types/js-yaml": "^3.12.4",
+    "@types/lodash": "^4.14.157",
     "@types/node": "^14.0.13",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.5"
@@ -34,6 +35,7 @@
     "console-log-level": "^1.4.1",
     "fs": "0.0.1-security",
     "js-yaml": "^3.14.0",
+    "lodash": "^4.17.15",
     "path": "^0.12.7"
   }
 }
